--- a/myApp/views/alertflies.ejs
+++ b/myApp/views/alertflies.ejs
@@ -54,6 +54,9 @@
 </head>
 
 <body>
+    <script>
+        alert("Book is already in your list");  
+    </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
         <a class="navbar-brand" style="color: rgb(191, 255, 161)">Lord of the Flies</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
