--- a/myApp/views/home.ejs
+++ b/myApp/views/home.ejs
@@ -93,8 +93,10 @@
         <br>
         <button onclick="location.href = '/fiction';" id="fiction" class="btn btn-secondary ml-3"> View </button>
     </div>
+    <form method="POST" action='/readlist' class="form-inline my-2 my-lg-0">
     <div class="readlist">
         <button onclick="location.href = '/readlist';" id="readlist" class="btn btn-secondary ml-3" style="width: 300px;">Want to Read List</button>
     </div>
+    </form>
 </body>
 </html>
