--- a/myApp/views/leaves.ejs
+++ b/myApp/views/leaves.ejs
@@ -77,13 +77,13 @@
     <div class="container2">
         A poetry collection by American poet Walt Whitman (1819–1892), each poem of which is loosely connected and represents the celebration of his philosophy of life and humanity.
     </div>
+    <form method="POST" action='/leaves' class="form-inline my-2 my-lg-0">
     <div class="readlist">
         <button id="readlist" class="btn btn-secondary ml-3">Add to Want to Read List</button>
     </div>
+    </form>
     <div class="video">
-        <video width="480" height="360" controls>
-            <source src="/leaves.mp4">
-        </video>
+        <iframe width="480" height="360" src="https://www.youtube.com/embed/RR4syp8Nhs8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 </body>
