--- a/myApp/views/alertgrapes.ejs
+++ b/myApp/views/alertgrapes.ejs
@@ -48,14 +48,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lord of the Flies</title>
+    <title>The Grapes of Wrath</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-
 <body>
+    <script>
+        alert("Book is already in your list");  
+    </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-        <a class="navbar-brand" style="color: rgb(191, 255, 161)">Lord of the Flies</a>
+        <a class="navbar-brand" style="color: rgb(191, 255, 161)">The Grapes of Wrath</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -71,18 +73,18 @@
         </div>
     </nav>
     <div class="container1">
-        <img id="image" src="/flies.jpg" width="193" height="300">
+        <img id="image" src="/grapes.jpg" width="193" height="300">
     </div>
     <div class="container2">
-        At the dawn of the next world war, a plane crashes on an uncharted island, stranding a group of schoolboys. At first, with no adult supervision, their freedom is something to celebrate; this far from civilization the boys can do anything they want. Anything.
+        First published in 1939, Steinbeck’s Pulitzer Prize-winning epic of the Great Depression chronicles the Dust Bowl migration of the 1930s and tells the story of one Oklahoma farm family, the Joads—driven from their homestead and forced to travel west to the promised land of California.
     </div>
-    <form method="POST" action='/flies' class="form-inline my-2 my-lg-0">
+    <form method="POST" action='/grapes' class="form-inline my-2 my-lg-0">
     <div class="readlist">
         <button id="readlist" class="btn btn-secondary ml-3">Add to Want to Read List</button>
     </div>
-    </form> 
+    </form>
     <div class="video">
-        <iframe width="480" height="360" src="https://www.youtube.com/embed/CRo7dVRf6Wo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+        <iframe width="480" height="360" src="https://www.youtube.com/embed/fOuAZLA_jWQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>
 </html>
