--- a/myApp/views/alertleaves.ejs
+++ b/myApp/views/alertleaves.ejs
@@ -7,6 +7,7 @@
             background-repeat: no-repeat;
             background-size: 100%;
         }
+
         h1 {
             color: white;
             text-align: center;
@@ -48,14 +49,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lord of the Flies</title>
+    <title>Leaves of Grass</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
+    <script>
+        alert("Book is already in your list");  
+    </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-        <a class="navbar-brand" style="color: rgb(191, 255, 161)">Lord of the Flies</a>
+        <a class="navbar-brand" style="color: rgb(191, 255, 161)">Leaves of Grass</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -71,18 +75,20 @@
         </div>
     </nav>
     <div class="container1">
-        <img id="image" src="/flies.jpg" width="193" height="300">
+        <img id="image" src="/leaves.jpg" width="193" height="300">
     </div>
     <div class="container2">
-        At the dawn of the next world war, a plane crashes on an uncharted island, stranding a group of schoolboys. At first, with no adult supervision, their freedom is something to celebrate; this far from civilization the boys can do anything they want. Anything.
+        A poetry collection by American poet Walt Whitman (1819–1892), each poem of which is loosely connected and represents the celebration of his philosophy of life and humanity.
     </div>
-    <form method="POST" action='/flies' class="form-inline my-2 my-lg-0">
+    <form method="POST" action='/leaves' class="form-inline my-2 my-lg-0">
     <div class="readlist">
         <button id="readlist" class="btn btn-secondary ml-3">Add to Want to Read List</button>
     </div>
-    </form> 
+    </form>
     <div class="video">
-        <iframe width="480" height="360" src="https://www.youtube.com/embed/CRo7dVRf6Wo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+        <iframe width="480" height="360" src="https://www.youtube.com/embed/RR4syp8Nhs8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+
 </body>
+
 </html>
