--- a/myApp/views/dune.ejs
+++ b/myApp/views/dune.ejs
@@ -76,13 +76,13 @@
     <div class="container2">
         Set on the desert planet Arrakis, Dune is the story of the boy Paul Atreides, heir to a noble family tasked with ruling an inhospitable world where the only thing of value is the “spice” melange, a drug capable of extending life and enhancing consciousness. Coveted across the known universe, melange is a prize worth killing for.
     </div>
+    <form method="POST" action='/dune' class="form-inline my-2 my-lg-0">
     <div class="readlist">
         <button id="readlist" class="btn btn-secondary ml-3">Add to Want to Read List</button>
     </div>
+    </form>
     <div class="video">
-        <video width="480" height="360" controls>
-            <source src="/dune.mp4">
-        </video>
+        <iframe width="480" height="360" src="https://www.youtube.com/embed/n9xhJrPXop4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 </body>
