--- a/myApp/views/grapes.ejs
+++ b/myApp/views/grapes.ejs
@@ -75,13 +75,13 @@
     <div class="container2">
         First published in 1939, Steinbeck’s Pulitzer Prize-winning epic of the Great Depression chronicles the Dust Bowl migration of the 1930s and tells the story of one Oklahoma farm family, the Joads—driven from their homestead and forced to travel west to the promised land of California.
     </div>
+    <form method="POST" action='/grapes' class="form-inline my-2 my-lg-0">
     <div class="readlist">
         <button id="readlist" class="btn btn-secondary ml-3">Add to Want to Read List</button>
     </div>
+    </form>
     <div class="video">
-        <video width="480" height="360" controls>
-            <source src="/grapes.mp4">
-        </video>
+        <iframe width="480" height="360" src="https://www.youtube.com/embed/fOuAZLA_jWQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>
 </html>
