--- a/myApp/views/mockingbird.ejs
+++ b/myApp/views/mockingbird.ejs
@@ -76,13 +76,13 @@
     <div class="container2">
             The unforgettable novel of a childhood in a sleepy Southern town and the crisis of conscience that rocked it, To Kill A Mockingbird became both an instant bestseller and a critical success when it was first published in 1960. It went on to win the Pulitzer Prize in 1961 and was later made into an Academy Award-winning film, also a classic.
     </div>
+    <form method="POST" action='/mockingbird' class="form-inline my-2 my-lg-0">
     <div class="readlist">
         <button id="readlist" class="btn btn-secondary ml-3">Add to Want to Read List</button>
     </div>
+    </form>
     <div class="video">
-        <video width="480" height="360" controls>
-            <source src="/mockingbird.mp4">
-        </video>
+        <iframe width="480" height="360" src="https://www.youtube.com/embed/KR7loA_oziY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>
 </html>
