--- a/myApp/views/searchresults.ejs
+++ b/myApp/views/searchresults.ejs
@@ -38,10 +38,15 @@
             </form>
         </div>
     </nav>
-    <% results.forEach(function(result){ %>
+        <% results.forEach(function(result){ %>
+            <span class="container1">
+                <img id="image" src="<%= result.ref %>.jpg" width="193" height="300">
+                <a href= <%= result.ref %> ><strong><%= result.name%></strong></a> 
+            </span>
+            
+            <% }) %>
+
         
-        <a href= <%= result.ref %> ><strong><%= result.name%></strong></a> </br>
-        <% }) %>
         
 </body>
 </html>
