--- a/myApp/views/sun.ejs
+++ b/myApp/views/sun.ejs
@@ -76,13 +76,13 @@
     <div class="container2">
         From Rupi Kaur, the #1 New York Times bestselling author of milk and honey, comes her long-awaited second collection of poetry. A vibrant and transcendent journey about growth and healing. Ancestry and honoring one’s roots. Expatriation and rising up to find a home within yourself.
     </div>
+    <form method="POST" action='/sun' class="form-inline my-2 my-lg-0">
     <div class="readlist">
         <button id="readlist" class="btn btn-secondary ml-3">Add to Want to Read List</button>
     </div>
+    </form>
     <div class="video">
-        <video width="480" height="360" controls>
-            <source src="/sun.mp4">
-        </video>
-    </div>s
+        <iframe width="480" height="360" src="https://www.youtube.com/embed/EHkFFA5iGlc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
